force-app/main/default/objects/Menu_Item__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available?</label>
    <type>Checkbox</type>
</CustomField>