force-app/main/default/objects/Menu_Item__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pizza</fullName>
            </value>
            <value>
                <fullName>Burger</fullName>
            </value>
            <value>
                <fullName>Drinks</fullName>
            </value>
            <value>
                <fullName>Dessert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>