force-app/main/default/objects/Menu_Item__c/fields/Restaurant__c.field-meta.xml
<CustomField>
    <fullName>Restaurant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Restaurant</label>
    <referenceTo>Restaurant__c</referenceTo>
    <relationshipLabel>Menu Items</relationshipLabel>
    <relationshipName>Menu_Items</relationshipName>
    <type>Lookup</type>
</CustomField>